# OpenGL_Learning0

./: CMakeLists.txt  README.txt
res/shaders/: flat_color.glsl  vertex.glsl
src/: main.cpp
src/Modules/FileReader/: FIleReader.cpp  FileReader.h
src/Modules/ShaderReader/: ShaderReader.cpp  ShaderReader.h
src/Modules/TextureReader/: TextureReader.h
